api-gateway/httpbin/0-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-route
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gateway.traefik.localhost`) || Host(`gateway.traefik.cloud`) && PathPrefix(`/httpbin`)
      services:
        - name: httpbin-svc
          namespace: apps
          port: 8000
      middlewares:
        - name: strip-httpbin-prefix
        - name: keycloak-jwt-authentication
        - name: ratelimit
      #  - name: ipallowlist
        - name: waf
